--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tslint-ext",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,11 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^26.0.13",
-    "@types/node": "^14.6.4",
+    "@types/node": "^14.10.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
     "tslint": "^6.1.3",
     "tsutils": "^3.17.1",
     "typescript": "^4.0.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/szai0103/tslint-ext.git"
+  },
+  "bugs": {
+    "url": "https://github.com/szai0103/tslint-ext/issues"
+  },
+  "homepage": "https://github.com/szai0103/tslint-ext#readme",
+  "description": ""
 }
